# stanford-cs336-notes

./: .gitignore  AGENTS.md  LICENSE  index.md  pyproject.toml
assignments/: README.md
assignments/assignment1-basics/: Cargo.toml  longest_vocab.py  pyproject.toml  tokenizer_prepare_data.py  verify.py
assignments/assignment1-basics/artifacts/: TinyStoriesV2-GPT4.merges.txt  TinyStoriesV2-GPT4.vocab.txt  owt.merges.txt  owt.vocab.txt
assignments/assignment1-basics/cs336_basics/: Linear.py  bpe.py  cs336_basics.pyi
assignments/assignment1-basics/src/: lib.rs
assignments/assignment1-basics/tests/: adapters.py  test_tokenizer.py
experiment/: autograd.py  color-blend.py  decode-utf8.py  regex-pretokenizer.py  save-load-parquet.py
experiment/einops/: course.py  tutorial.py
experiment/maturin-mixed-layout/: .gitignore  Cargo.toml  README.md  pyproject.toml
experiment/maturin-mixed-layout/my_project/: bar.py
experiment/maturin-mixed-layout/src/: lib.rs
experiment/numpy_perf/: numpy_1m_int.py
experiment/pyo3-helloworld/: Cargo.toml  README.md  pyproject.toml
experiment/pyo3-helloworld/python/: caller.py
experiment/pyo3-helloworld/src/: lib.rs
notes/: README.md
notes/assignments/: assignment1-basics.md
notes/concepts/: bert.md  ffi.md  gpt2-pretokenization-regex.md  parquet.md  pytorch.md  tensor.md  tensorflow.md
notes/datasets/: README.md  openwebtext.md  tiny-stories.md
notes/lectures/: README.md
notes/papers/: README.md  tiny-stories.md
notes/tools/: numpy.md  pyo3.md  pyproject.md  python-build-backends.md  uv.md
raw/: README.md
