[project]
name = "stanford-cs336-language-modeling-from-scratch-2026-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "regex>=2026.3.32",
    "torch>=2.12.0",
]
[tool.pyright]
venvPath = "."
venv = ".venv"
