[package]
name = "cs336_basics_rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "cs336_basics"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["experimental-inspect"] }
cs336_rs = { git = "https://github.com/IronBlood/cs336-rs", rev = "cb28599200cfffdb33d305e3d542845dee9edd4a" }
